--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,4 +11,6 @@ body {
   background-position: bottom;
   background-color: #95e8f3;
   min-height: 100%;
+  max-height: 100vh;
+  overflow: scroll;
 }
